keycloak/keycloak-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: keycloak-ui-ingress
  namespace: keycloak
spec:
  ingressClassName: nginx
  rules:
  - host: authst.vsamtuc.top
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - authst.vsamtuc.top
    secretName: keycloak-ui-tls
